k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aleyna
  labels:
    app: aleyna
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aleyna
  template:
    metadata:
      labels:
        app: aleyna
    spec:
      containers:
        - name: aleyna
          image: ghcr.io/lilianschall/aleyna:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
